traces/bug_314.txt
src/medit/inout_morice.c:281: error: DEAD_STORE
  The value written to &keyse (type char[2*1](&)) is never used.
Showing all 1 steps of the trace


src/medit/inout_morice.c:281:3: Write of unused value
279.     int     lench;
280.     char    keyseE[]="eE"; 
281.     char    keyse[]="e"; 
         ^
282.   
283.     fgets(data,256,stdin);
